# auv-kalman-filter

./: .gitignore  README.md
data/: save_csv.sh
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/medusa_msgs/: AttitudeEuler.h  Battery.h  CameraGet.h  Command.h  ImageData.h  List.h  Maneuver.h  NavStatus.h  Plan.h  Position.h  Range.h  SensorMeasurement.h  SonarGet.h  VehicleStatus.h  Velocity.h  VelocityBody.h  VelocityNED.h
devel/lib/pkgconfig/: medusa_msgs.pc  nodo_sapienza.pc
devel/lib/python2.7/dist-packages/medusa_msgs/msg/: _AttitudeEuler.py  _Battery.py  _CameraGet.py  _Command.py  _ImageData.py  _List.py  _Maneuver.py  _NavStatus.py  _Plan.py  _Position.py  _Range.py  _SensorMeasurement.py  _SonarGet.py  _VehicleStatus.py  _Velocity.py  _VelocityBody.py  _VelocityNED.py  __init__.py
devel/share/medusa_msgs/cmake/: medusa_msgs-msg-extras.cmake  medusa_msgs-msg-paths.cmake  medusa_msgsConfig.cmake
devel/share/nodo_sapienza/cmake/: nodo_sapienzaConfig.cmake
devel/share/roseus/ros/medusa_msgs/: manifest.l
launch/: nodo_sap.launch
plots/: check_range.ipynb  plots_irene.ipynb
scripts/: k_filter_all.py  k_filter_imu_range.py  nodo_sap.py
src/medusa_msgs/: CMakeLists.txt  package.xml
src/medusa_msgs/msg/: Battery.msg  CameraGet.msg  ImageData.msg  List.msg  Maneuver.msg  NavStatus.msg  Plan.msg  Position.msg  Range.msg  SensorMeasurement.msg  SonarGet.msg  VehicleStatus.msg  Velocity.msg  VelocityNED.msg
src/nodo_sapienza/: CMakeLists.txt  package.xml
src/nodo_sapienza/launch/: nodo_sap.launch
src/nodo_sapienza/plots/: check_range.ipynb  errors_pars.txt
src/nodo_sapienza/scripts/: k_filter_all.py  k_filter_all_beacon_error.py  k_filter_imu_range.py  k_filter_range.py  k_filter_range_beacon_error.py  k_filter_range_beacon_error_original.py  k_filter_range_original.py  nodo_sap.py
(+71 files in other folders)
