<?xml version="1.0"?>
<package format="2">
  <name>medusa_msgs</name>
  <version>0.0.1</version>
  <description>MEUDSA for SUNSET - ROS messages definition package</description>

  <maintainer email="matteo.bresciani@dii.unipi.it">Matteo Bresciani</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>